@@ -1,3 +1,10 @@
+2001-07-17  jacob berkman  <jacob@ximian.com>
+
+	* gen_util/popcheck.c (imap_check): make this actually compile and
+	have some sane indenting and stuff.
+
+	it amazes me that this code got in and stuff.
+
 Wed Jul 11 14:23:39 2001  George Lebl <jirka@5z.com>
 
 	* gen_util/popcheck.c: apply and massage patch from Jon Bowman
